# numba-instrument

./: .envrc  .gitignore  LICENSE  Makefile  pyproject.toml  readme.md
.cursor/skills/run-linters/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.cursor/skills/write-docstrings/: SKILL.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml
src/numba_instrument/: __init__.py  fallback.py  markers.py
src/numba_instrument/preprocessor/: activate.py  expand.py  import_hook.py
tests/: conftest.py  test_import_hook.py
tests/test_fixtures/: sample_module.py
